adding hypothesis test for checking bmi

--- a/WHO_SDA.ipynb
+++ b/WHO_SDA.ipynb
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "7dba09e4-0baf-4e3a-836b-a82f4b3cdb9d",
    "metadata": {},
    "outputs": [],
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "6c7aa5be-ebc6-4773-8f29-ae105d3e5789",
    "metadata": {},
    "outputs": [
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "id": "161122b3-060b-4773-864c-8243ee56af23",
    "metadata": {},
    "outputs": [
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "id": "c0ddeac3-4144-4f2a-82bc-9313af15b9e9",
    "metadata": {},
    "outputs": [
@@ -455,9 +455,116 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "dd0662f7-47c9-48a3-bfc4-d9c9ab8465b9",
+   "metadata": {},
+   "source": [
+    "### CHECKING WHO'S HYPOTHESIS ON WHETHER AVERAGES OF BODY WEIGHT INDICATORS ARE THE SAME FOR DEVELOPED AND DEVELOPING COUNTRIES "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "a4b5483b-f188-409a-88de-661ff483c0fc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>country</th>\n",
+       "      <th>status</th>\n",
+       "      <th>bmi</th>\n",
+       "      <th>thinness__1-19_years</th>\n",
+       "      <th>thinness_5-9_years</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>Developing</td>\n",
+       "      <td>19.1</td>\n",
+       "      <td>17.2</td>\n",
+       "      <td>17.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>Developing</td>\n",
+       "      <td>18.6</td>\n",
+       "      <td>17.5</td>\n",
+       "      <td>17.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>Developing</td>\n",
+       "      <td>18.1</td>\n",
+       "      <td>17.7</td>\n",
+       "      <td>17.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>Developing</td>\n",
+       "      <td>17.6</td>\n",
+       "      <td>17.9</td>\n",
+       "      <td>18.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>Developing</td>\n",
+       "      <td>17.2</td>\n",
+       "      <td>18.2</td>\n",
+       "      <td>18.2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       country      status   bmi  thinness__1-19_years  thinness_5-9_years\n",
+       "0  Afghanistan  Developing  19.1                  17.2                17.3\n",
+       "1  Afghanistan  Developing  18.6                  17.5                17.5\n",
+       "2  Afghanistan  Developing  18.1                  17.7                17.7\n",
+       "3  Afghanistan  Developing  17.6                  17.9                18.0\n",
+       "4  Afghanistan  Developing  17.2                  18.2                18.2"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# TEST HYPOTHESIS THAT BMI FOR DEVELOPED AND DEVELOPING COUNTRIES ARE THE SAME OR NOT\n",
+    "bmi_data = data[['country', 'status', 'bmi', 'thinness__1-19_years', 'thinness_5-9_years']]\n",
+    "bmi_data.head()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a4b5483b-f188-409a-88de-661ff483c0fc",
+   "id": "95e9c605-0ecd-44b9-bb76-1a18291f17ec",
    "metadata": {},
    "outputs": [],
    "source": []
